[gd_scene load_steps=3 format=3 uid="uid://cow7idq53rb6w"]

[ext_resource type="Script" path="res://scripts/ui/mission_board_item.gd" id="1_tik7b"]

[sub_resource type="LabelSettings" id="LabelSettings_ephas"]
font_size = 22

[node name="Mission" type="Control"]
custom_minimum_size = Vector2(0, 87.51)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tik7b")

[node name="Description" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 610.0
offset_bottom = 44.0

[node name="MissionLabel" type="Label" parent="Description"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Conquer"
label_settings = SubResource("LabelSettings_ephas")

[node name="MarginContainer" type="MarginContainer" parent="Description"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="BucklesLabel" type="Label" parent="Description"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_ephas")

[node name="WeatherLabel" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 29.0
offset_top = 38.0
offset_right = 101.0
offset_bottom = 61.0
text = "Acid Rain"

[node name="DifficultyLabel" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 29.0
offset_top = 62.0
offset_right = 101.0
offset_bottom = 85.0
text = "Difficultly: Hard"

[node name="EnterButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Enter"
